--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -363,4 +363,151 @@
   <data name="DecimalFormat" xml:space="preserve">
     <value>Сума повинна мати формат (0.00 або 0.0 або 0)</value>
   </data>
+  <data name="AddBankProduct" xml:space="preserve">
+    <value>Додати банківський продукт</value>
+  </data>
+  <data name="AskToAddMoney" xml:space="preserve">
+    <value>Ви впевнені, що хочете додати кошти?</value>
+  </data>
+  <data name="BackToProfile" xml:space="preserve">
+    <value>Повернутися до профілю</value>
+  </data>
+  <data name="BankProducts" xml:space="preserve">
+    <value>Продукти банку</value>
+  </data>
+  <data name="ChangePassword" xml:space="preserve">
+    <value>Зміна паролю</value>
+  </data>
+  <data name="Clients" xml:space="preserve">
+    <value>Клієнти</value>
+  </data>
+  <data name="ClientsPassport" xml:space="preserve">
+    <value>Паспорт клієнта</value>
+  </data>
+  <data name="ClientsProfile" xml:space="preserve">
+    <value>Профіль клієнта</value>
+  </data>
+  <data name="CreditName" xml:space="preserve">
+    <value>Назва кредиту</value>
+  </data>
+  <data name="Credits" xml:space="preserve">
+    <value>Кредити</value>
+  </data>
+  <data name="CurrencyDelete" xml:space="preserve">
+    <value>Видалити валюту</value>
+  </data>
+  <data name="DepositName" xml:space="preserve">
+    <value>Назва депозиту</value>
+  </data>
+  <data name="Deposits" xml:space="preserve">
+    <value>Депозити</value>
+  </data>
+  <data name="DescribeTheProblem" xml:space="preserve">
+    <value>Опишіть проблему</value>
+  </data>
+  <data name="Duration" xml:space="preserve">
+    <value>Тривалість</value>
+  </data>
+  <data name="EarlyTermination" xml:space="preserve">
+    <value>Дострокове закінчення</value>
+  </data>
+  <data name="EarlyTerminationCredit" xml:space="preserve">
+    <value>Дострокове погашення</value>
+  </data>
+  <data name="Enter" xml:space="preserve">
+    <value>Увійти</value>
+  </data>
+  <data name="ErrorCode" xml:space="preserve">
+    <value>Код помилки</value>
+  </data>
+  <data name="ErrorTakeMoneyFromCreditAcc" xml:space="preserve">
+    <value>Помилка: Неможливо зняти кошти з кредитного рахунку</value>
+  </data>
+  <data name="FinancialReports" xml:space="preserve">
+    <value>Фінансові звіти</value>
+  </data>
+  <data name="Hello" xml:space="preserve">
+    <value>Здрастуйте</value>
+  </data>
+  <data name="InterestRate" xml:space="preserve">
+    <value>Відсоткова ставка</value>
+  </data>
+  <data name="LogIn" xml:space="preserve">
+    <value>Увійти</value>
+  </data>
+  <data name="LogInForClients" xml:space="preserve">
+    <value>Вхід для клієнтів</value>
+  </data>
+  <data name="LoginHelpMessage" xml:space="preserve">
+    <value>Використайте Ваші облікові дані для входу в систему.</value>
+  </data>
+  <data name="LogInTitle" xml:space="preserve">
+    <value>Вхід</value>
+  </data>
+  <data name="LogOff" xml:space="preserve">
+    <value>Вийти</value>
+  </data>
+  <data name="OperationError" xml:space="preserve">
+    <value>Помилка операції</value>
+  </data>
+  <data name="OperationErrorMessage" xml:space="preserve">
+    <value>Будь ласка, зверніться до системного адміністратора або оператора</value>
+  </data>
+  <data name="Operators" xml:space="preserve">
+    <value>Оператори</value>
+  </data>
+  <data name="OperatorsList" xml:space="preserve">
+    <value>Список операторів</value>
+  </data>
+  <data name="PayIn" xml:space="preserve">
+    <value>Внести кошти</value>
+  </data>
+  <data name="PayOut" xml:space="preserve">
+    <value>Зняти кошти</value>
+  </data>
+  <data name="Refresh" xml:space="preserve">
+    <value>Оновити</value>
+  </data>
+  <data name="RegisterOperator" xml:space="preserve">
+    <value>Зареєструвати оператора</value>
+  </data>
+  <data name="Submit" xml:space="preserve">
+    <value>Підтвердити</value>
+  </data>
+  <data name="SubmitEntry" xml:space="preserve">
+    <value>Відправити</value>
+  </data>
+  <data name="TakeAPicture" xml:space="preserve">
+    <value>Сфотографувати</value>
+  </data>
+  <data name="TotalCreditAmount" xml:space="preserve">
+    <value>Загальна сума кредиту</value>
+  </data>
+  <data name="TotalDepositedAmount" xml:space="preserve">
+    <value>Загальна сума депозиту</value>
+  </data>
+  <data name="TotalDepositInterests" xml:space="preserve">
+    <value>Сума нарахувань за депозитами</value>
+  </data>
+  <data name="TransferErrorFromCreditAcc" xml:space="preserve">
+    <value>Помилка: Неможливо переказати кошти з кредитного рахунку</value>
+  </data>
+  <data name="TransferFunds" xml:space="preserve">
+    <value>Грошові перекази</value>
+  </data>
+  <data name="TypeTheSymbols" xml:space="preserve">
+    <value>Введіть символи з картинки</value>
+  </data>
+  <data name="TypeTheText" xml:space="preserve">
+    <value>Введіть текст</value>
+  </data>
+  <data name="WithdrawFunds" xml:space="preserve">
+    <value>Вивід коштів</value>
+  </data>
+  <data name="WrongCapchaInput" xml:space="preserve">
+    <value>Введено неправильні символи з картинки</value>
+  </data>
+  <data name="YouAreLoggedInAs" xml:space="preserve">
+    <value>Ви ввійшли як</value>
+  </data>
 </root>
