--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -427,7 +427,7 @@
     <value>Фінансові звіти</value>
   </data>
   <data name="Hello" xml:space="preserve">
-    <value>Здрастуйте</value>
+    <value>Вітаємо</value>
   </data>
   <data name="InterestRate" xml:space="preserve">
     <value>Відсоткова ставка</value>
