--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -510,4 +510,13 @@
   <data name="YouAreLoggedInAs" xml:space="preserve">
     <value>Ви ввійшли як</value>
   </data>
+  <data name="Block" xml:space="preserve">
+    <value>Заблокувати</value>
+  </data>
+  <data name="Freeze" xml:space="preserve">
+    <value>Заморозити</value>
+  </data>
+  <data name="SetToNormal" xml:space="preserve">
+    <value>Зробити нормальним</value>
+  </data>
 </root>
