--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -558,4 +558,7 @@
   <data name="History" xml:space="preserve">
     <value>Історія</value>
   </data>
+  <data name="BankAccounts" xml:space="preserve">
+    <value>Рахунки банку</value>
+  </data>
 </root>
