--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -558,4 +558,7 @@
   <data name="History" xml:space="preserve">
     <value>History</value>
   </data>
+  <data name="BankAccounts" xml:space="preserve">
+    <value>Bank accounts</value>
+  </data>
 </root>
