Translated some references one more time

--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -561,4 +561,13 @@
   <data name="BankAccounts" xml:space="preserve">
     <value>Bank accounts</value>
   </data>
+  <data name="CurrencyName" xml:space="preserve">
+    <value>Currency name</value>
+  </data>
+  <data name="PurchaseRate" xml:space="preserve">
+    <value>Purchase rate</value>
+  </data>
+  <data name="SallingRate" xml:space="preserve">
+    <value>Salling rate</value>
+  </data>
 </root>
