Added "Back" everywhere, added pages title

--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -570,4 +570,10 @@
   <data name="SallingRate" xml:space="preserve">
     <value>Salling rate</value>
   </data>
+  <data name="AllowWebAccees" xml:space="preserve">
+    <value>Allow web-accees</value>
+  </data>
+  <data name="EditClient" xml:space="preserve">
+    <value>Edit client profile</value>
+  </data>
 </root>
