--- a/EasyBank/Resources/Resource.resx
+++ b/EasyBank/Resources/Resource.resx
@@ -576,4 +576,7 @@
   <data name="EditClient" xml:space="preserve">
     <value>Edit client profile</value>
   </data>
+  <data name="EditCurrency" xml:space="preserve">
+    <value>Edit currency</value>
+  </data>
 </root>
