--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -576,4 +576,7 @@
   <data name="EditClient" xml:space="preserve">
     <value>Редагувати профіль клієнта</value>
   </data>
+  <data name="EditCurrency" xml:space="preserve">
+    <value>Редагувати валюту</value>
+  </data>
 </root>
