--- a/EasyBank/Resources/Resource.uk-UA.resx
+++ b/EasyBank/Resources/Resource.uk-UA.resx
@@ -442,7 +442,7 @@
     <value>Використайте Ваші облікові дані для входу в систему.</value>
   </data>
   <data name="LogInTitle" xml:space="preserve">
-    <value>Вхід</value>
+    <value>Вхід в офіс</value>
   </data>
   <data name="LogOff" xml:space="preserve">
     <value>Вийти</value>
